# JsHunter

./: .gitignore  INSTALL.md  README.md  docker-compose.yml  environment.yml  extracted_links_secrets.json  index.html  jsninja  jsninja.html  jsninja.py  pyproject.toml  setup.py  setup_jshunter.py  setup_path.sh  test_secrets.js  workflow.md
.github/workflows/: deploy-web.yml
JsNinja Web/: app.py  package.json  requirements.txt  run.sh
JsNinja Web/app/: page.tsx
JsNinja Web/app/dashboard/: page.tsx
JsNinja Web/app/projects/: page.tsx
JsNinja Web/app/projects/[id]/: page.tsx
JsNinja Web/app/scan/: page.tsx
JsNinja Web/components/ui/: progress.tsx
JsNinja Web/lib/: scanner.ts  secret-patterns.ts  supabase.ts
JsNinja Web/scripts/: 001-create-tables.sql
JsNinja Web/static/css/: style.css
JsNinja Web/static/js/: main.js
JsNinja Web/templates/: base.html  create_monitor.html  create_project.html  dashboard.html  index.html  login.html  monitor_detail.html  monitors.html  project_detail.html  projects.html  scan.html  scan_results.html  settings.html
cli/: Dockerfile  README.md  jshunter  jsninja.py
discord-bot/: Dockerfile  README.md  config.example.py  jshunter_discord.py  jshunter_webhook.py  jsninja_discord.py  requirements.txt
jshunter/cli/: jshunter.py
jshunter/web/: __init__.py
jsninja/: __init__.py
jsninja/web/: __init__.py  main.py  utils.py
jsninja/web/templates/: index.html
telegram-bot/: Dockerfile  README.md  config.example.py  jshunter_bot.py  jsninja_bot.py  requirements.txt
