[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jshunter-scanner"
version = "1.0.0"
description = "A comprehensive JavaScript security scanner"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

[tool.setuptools]
packages = ["jshunter"]

[project.scripts]
jshunter = "jshunter.cli.jshunter:main"
jshunter-web = "jshunter.web.main:main"